--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 		</servlet-class>
 		<init-param>
 			<param-name>jaxrs.serviceClasses</param-name>
-			<param-value>com.SOR2.REST.ChangeStudentDetailsImpl</param-value>
+			<param-value>com.SOR2.REST.ChangeStudentDetailsImpl com.SOR2.REST.ChangeStudentDetailsImpl2</param-value>
 		</init-param>
 		<init-param>
 			<param-name>jaxrs.address</param-name>
