1 Rest class een betere naam gegeven 2 Er kan nu een JSON object worden verzonden die naar de ontvanger wordt gestuurd 3 Er is een simpele validatie om te kijken of een aantal velden in het JSON object aanwezig zijn

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 		</servlet-class>
 		<init-param>
 			<param-name>jaxrs.serviceClasses</param-name>
-			<param-value>com.SOR2.REST.ChangeStudentDetailsImpl com.SOR2.REST.ChangeStudentDetailsImpl2</param-value>
+			<param-value>com.SOR2.REST.SendDocument</param-value>
 		</init-param>
 		<init-param>
 			<param-name>jaxrs.address</param-name>
@@ -67,7 +67,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CXFNonSpringJaxrsServletReceiver</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/testservices/*</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
