--- a/pom.xml
+++ b/pom.xml
@@ -123,9 +123,9 @@
         </dependency>
         <!--  for connecting to a DB -->
         <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.9</version>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>
+        <version>1.1.8</version>
     </dependency>
         <!--  Apache CXF -->
     <dependency>
