--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
 		The value might be either "development" (reloading when templates change) or 
 		"deployment". If no configuration is found, "development" is the default. -->
-
+	
 	<filter>
 		<filter-name>wicket.SOR2-v3</filter-name>
 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
@@ -29,9 +29,9 @@
 		<filter-name>wicket.SOR2-v3</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 		<!-- CXF Restful servlet -->
-	<servlet>
+<!-- 	<servlet>
 		<display-name>CXFNonSpringJaxrsServlet</display-name>
 		<servlet-name>CXFNonSpringJaxrsServlet</servlet-name>
 		<servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet
@@ -48,10 +48,10 @@
 	<servlet-mapping>
 		<servlet-name>CXFNonSpringJaxrsServlet</servlet-name>
 		<url-pattern>/services/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>  -->
 	
 	<!-- CXF Restful servlet - receiver -->
-	<servlet>
+ 	<servlet>
 		<display-name>CXFNonSpringJaxrsServletReceiver</display-name>
 		<servlet-name>CXFNonSpringJaxrsServletReceiver</servlet-name>
 		<servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet
@@ -70,4 +70,15 @@
 		<url-pattern>/testservices/*</url-pattern>
 	</servlet-mapping>
 	
+	<!-- CXF SOAP servlet -->
+ 	<servlet>
+		<display-name>SimpleCXFNonSpringServlet</display-name>
+		<servlet-name>SimpleCXFNonSpringServlet</servlet-name>
+		<servlet-class>com.SOR2.SOAP.SimpleCXFNonSpringServlet</servlet-class>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>SimpleCXFNonSpringServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>  
 </web-app>
