--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,14 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.3.8.Final</version>
         </dependency>
+        
+        <!-- Easymock voor JUnit -->
+        <dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.1</version>
+		</dependency>
+        
 
         <!-- Because this is a web app, we also have a dependency on the servlet api. -->
         <dependency>
