--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,68 +29,22 @@
 		<filter-name>wicket.SOR2-v3</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-		<!-- CXF Restful servlet -->
-<!-- 	<servlet>
-		<display-name>CXFNonSpringJaxrsServlet</display-name>
-		<servlet-name>CXFNonSpringJaxrsServlet</servlet-name>
-		<servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet
-		</servlet-class>
-		<init-param>
-			<param-name>jaxrs.serviceClasses</param-name>
-			<param-value>com.SOR2.REST.SendDocument</param-value>
-		</init-param>
-		<init-param>
-			<param-name>jaxrs.address</param-name>
-			<param-value>/rest</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>CXFNonSpringJaxrsServlet</servlet-name>
-		<url-pattern>/services/*</url-pattern>
-	</servlet-mapping>  -->
 	
-	<!-- CXF Restful servlet - receiver -->
-<!--  	<servlet>
-		<display-name>CXFNonSpringJaxrsServletReceiver</display-name>
-		<servlet-name>CXFNonSpringJaxrsServletReceiver</servlet-name>
-		<servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet
-		</servlet-class>
-		<init-param>
-			<param-name>jaxrs.serviceClasses</param-name>
-			<param-value>com.SOR2.ontvanger.ontvanger</param-value>
-		</init-param>
-		<init-param>
-			<param-name>jaxrs.address</param-name>
-			<param-value>/external</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>CXFNonSpringJaxrsServletReceiver</servlet-name>
-		<url-pattern>/testservices/*</url-pattern>
-	</servlet-mapping> -->
-	
-	<!-- CXF SOAP servlet -->
-	<servlet>
-		<display-name>SimpleCXFNonSpringServlet</display-name>
-		<servlet-name>SimpleCXFNonSpringServlet</servlet-name>
-		<servlet-class>com.SOR2.SOAP.SimpleCXFNonSpringServlet</servlet-class>
-	</servlet>
-		
-	<servlet-mapping>
-		<servlet-name>SimpleCXFNonSpringServlet</servlet-name>
-		<url-pattern>/services/*</url-pattern>
-	</servlet-mapping>  
-	
-	<!-- CXF SOAP servlet receiver -->
-	<servlet>
-		<display-name>SimpleCXFNonSpringServletReceiver</display-name>
-		<servlet-name>SimpleCXFNonSpringServletReceiver</servlet-name>
-		<servlet-class>com.SOR2.ontvanger.SimpleCXFNonSpringServlet</servlet-class>
-	</servlet>
-		
-	<servlet-mapping>
-		<servlet-name>SimpleCXFNonSpringServletReceiver</servlet-name>
-		<url-pattern>/testservices/*</url-pattern>
-	</servlet-mapping> 
+	<!--  new webservices -->
+    <display-name>cxf</display-name>
+    <servlet>
+        <description>Apache CXF Endpoint</description>
+        <display-name>cxf</display-name>
+        <servlet-name>cxf</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>cxf</servlet-name>
+        <url-pattern>/services/*</url-pattern>
+    </servlet-mapping>
+    <session-config>
+        <session-timeout>60</session-timeout>
+    </session-config>
+    
 </web-app>
