--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,38 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<!--  enforce HTTP -->
+	<Call name="addConnector">
+     <Arg>
+       <New class="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
+         <Arg>
+           <New class="org.eclipse.jetty.http.ssl.SslContextFactory">
+             <Set name="keyStore"><SystemProperty name="jetty.home" default="." />/Keystore/keystore</Set>
+             <Set name="keyStorePassword">OBF:1vny1zlo1x8e1vnw1vn61x8g1zlu1vn4</Set>
+             <Set name="keyManagerPassword">password</Set>
+             <Set name="trustStore"><SystemProperty name="jetty.home" default="." />/Keystore/keystore</Set>
+             <Set name="trustStorePassword">password</Set>
+           </New>
+         </Arg>
+         <Set name="port">8443</Set>
+         <Set name="confidentialPort">443</Set>
+         <Set name="maxIdleTime">30000</Set>
+       </New>
+     </Arg>
+     
+     <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Everything in the webapp</web-resource-name>
+      <url-pattern>/*</url-pattern>
+    </web-resource-collection>
+    <user-data-constraint>
+      <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+    </user-data-constraint>
+  </security-constraint>
+  
+  
+   </Call>
+	
 	<!--  new webservices -->
     <display-name>cxf</display-name>
     <servlet>
