--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-	<!--  enforce HTTP -->
+	<!--  enforce HTTPS -->
 	<Call name="addConnector">
      <Arg>
        <New class="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
